Fix TODO: groups override test

--- a/src/test/resources/application-overridegroups.yml
+++ b/src/test/resources/application-overridegroups.yml
@@ -2,11 +2,8 @@ akhq:
   security:
     groups:
       admin:
-        roles:
-          - topic/read
+        - role: acl-read
       limited:
-        roles:
-          - topic/read
+        - role: acl-read
       extra:
-        roles:
-          - topic/read
+        - role: acl-read
