Adding tests on patterns and clusters attributes

--- a/src/test/resources/application-extragroups.yml
+++ b/src/test/resources/application-extragroups.yml
@@ -2,9 +2,7 @@ akhq:
   security:
     groups:
       extra:
-        roles:
-          - topic/read
+        - role: topic-read
       another:
-        roles:
-          - topic/read
+        - role: topic-read
 
