--- a/application.example.yml
+++ b/application.example.yml
@@ -186,52 +186,64 @@ akhq:
 
   # Auth & Roles (optional)
   security:
+    roles:
+      topic-read:
+        - resources: [ "TOPIC", "TOPIC_DATA" ]
+          actions: [ "READ" ]
+        - resources: [ "TOPIC" ]
+          actions: [ "READ_CONFIG" ]
+      topic-admin:
+        - resources: [ "TOPIC", "TOPIC_DATA" ]
+          actions: [ "READ", "CREATE", "DELETE" ]
+        - resources: [ "TOPIC" ]
+          actions: [ "UPDATE", "READ_CONFIG", "ALTER_CONFIG" ]
+      connect-rw:
+        - resources: [ "CONNECTOR" ]
+          actions: [ "READ", "CREATE", "UPDATE_STATE" ]
+      connect-admin:
+        - resources: [ "CONNECTOR" ]
+          actions: [ "READ", "CREATE", "UPDATE_STATE", "DELETE" ]
+      registry-read:
+        - resources: [ "SCHEMA" ]
+          actions: [ "READ" ]
+      registry-admin:
+        - resources: [ "SCHEMA" ]
+          actions: [ "READ", "CREATE", "UPDATE", "DELETE", "DELETE_VERSION" ]
+      group-read:
+        - resources: [ "CONSUMER_GROUP" ]
+          actions: [ "READ" ]
+      connect-cluster-read:
+        - resources: [ "CONNECT_CLUSTER" ]
+          actions: [ "READ" ]
+      ksqldb-admin:
+        - resources: [ "KSQLDB" ]
+          actions: [ "READ", "EXECUTE" ]
+
     default-group: admin # Default groups for all the user even unlogged user
     # Groups definition
     groups:
-      admin: # unique key
-        name: admin # Group name
-        roles:  # roles for the group
-          - topic/read
-          - topic/insert
-          - topic/delete
-          - topic/config/update
-          - node/read
-          - node/config/update
-          - topic/data/read
-          - topic/data/insert
-          - topic/data/delete
-          - group/read
-          - group/delete
-          - group/offsets/update
-          - registry/read
-          - registry/insert
-          - registry/update
-          - registry/delete
-          - registry/version/delete
-          - acls/read
-          - connect/read
-          - connect/insert
-          - connect/update
-          - connect/delete
-          - connect/state/update
-        attributes:
-          # Regexp list to filter topic available for group
-          topics-filter-regexp:
-            - "test.*"
-          # Regexp list to filter connect configs visible for group
-          connects-filter-regexp:
-            - "^test.*$"
-          # Regexp list to filter consumer groups visible for group
-          consumer-groups-filter-regexp:
-            - "consumer.*"
-      topic-reader: # unique key
-        name: topic-reader # Other group
-        roles:
-          - topic/read
-        attributes:
-          topics-filter-regexp:
-            - "test\\.reader.*"
+      admin:
+        - role: topic-admin
+        - role: connect-admin
+        - role: registry-admin
+        - role: group-read
+        - role: connect-cluster-read
+        - role: ksqldb-admin
+      topic-reader:
+        - role: topic-read
+        - role: registry-admin
+      topic-reader-dev:
+        - role: topic-read
+          clusters: ["dev"]
+        - role: registry-admin
+          clusters: ["dev"]
+      topic-reader-project-prod:
+        - role: topic-read
+          patterns: ["project.*"]
+          clusters: ["prod.*"]
+        - role: registry-admin
+          patterns: ["project.*"]
+          clusters: ["prod.*"]
 
     # Basic auth configuration
     basic-auth:
@@ -239,7 +251,6 @@ akhq:
         password: pass # Password in sha256
         groups: # Groups for the user
           - admin
-          - topic-reader
 
     # Ldap Groups configuration (when using ldap)
     ldap:
@@ -247,14 +258,14 @@ akhq:
       groups:
         - name: group-ldap-1
           groups: # Akhq groups list
-            - topic-reader
+            - topic-reader-dev
         - name: group-ldap-2
           groups:
             - admin
       users:
         - username: riemann # ldap user id
           groups: # Akhq groups list
-            - topic-reader
+            - topic-reader-project-prod
         - username: einstein
           groups:
             - admin
