--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -153,7 +153,7 @@ akhq:
           actions: [ "READ", "CREATE", "UPDATE", "DELETE", "DELETE_VERSION" ]
       node-admin:
         - resources: [ "NODE" ]
-          actions: [ "READ_CONFIG", "ALTER_CONFIG" ]
+          actions: [ "READ", "READ_CONFIG", "ALTER_CONFIG" ]
       acl-reader:
         - resources: [ "ACL" ]
           actions: [ "READ" ]
@@ -166,6 +166,7 @@ akhq:
           # patterns: [ ".*" ]
           # clusters: [ ".*" ]
       admin:
+        - role: node-admin
         - role: topic-admin
         - role: topic-data-admin
         - role: consumer-group-admin
