--- a/helm/akhq/templates/ingress.yaml
+++ b/helm/akhq/templates/ingress.yaml
@@ -36,7 +36,7 @@ spec:
 	{{- range $ingressPaths }}
           - path: {{ . }}
             {{- if eq (include "akhq.ingress.apiVersion" $) "networking.k8s.io/v1" }}
-            pathType: "ImplementationSpecific"
+            pathType: {{ $.Values.ingress.pathType | default "ImplementationSpecific" }}
             {{- end }}
             backend:
               {{- if eq (include "akhq.ingress.apiVersion" $) "networking.k8s.io/v1" }}
