added ingress.pathType to values file

--- a/helm/akhq/values.yaml
+++ b/helm/akhq/values.yaml
@@ -121,6 +121,7 @@ ingress:
     # kubernetes.io/tls-acme: "true"
   paths:
     - /
+  pathType: "ImplementationSpecific"
   hosts:
     - akhq.demo.com
   tls: []
