fix(cicd): fix falling doc build

--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "5.2.0",
     "font-awesome": "^4.7.0",
     "github-contributors-list": "^1.2.5",
     "vuepress": "next"
