--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,26 @@
 plugins {
     // micronaut
     id "com.github.johnrengelman.shadow" version "8.1.1"
-    id "io.micronaut.application" version "3.7.10"
+    id "io.micronaut.application" version "4.1.2"
 
     // akhq
     id "com.gorylenko.gradle-git-properties" version "2.4.1"
-    id 'com.adarshr.test-logger' version '3.2.0'
-    id 'org.gradle.test-retry' version '1.5.3'
+    id 'com.adarshr.test-logger' version '4.0.0'
+    id 'org.gradle.test-retry' version '1.5.6'
     id 'com.github.psxpaul.execfork' version '0.2.2'
-    id "com.github.ben-manes.versions" version "0.47.0"
-    id "com.github.davidmc24.gradle.plugin.avro" version "1.7.1"
-
+    id "com.github.ben-manes.versions" version "0.49.0"
+    id "com.github.davidmc24.gradle.plugin.avro" version "1.9.1"
     // idea
     id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.7"
 }
-
+java {
+    sourceCompatibility = JavaVersion.toVersion("17")
+    targetCompatibility = JavaVersion.toVersion("17")
+}
 group "org.akhq"
-version "0.24.0"
+version "0.25.0"
 mainClassName = "org.akhq.App"
-sourceCompatibility = 11
+sourceCompatibility = "17"
 
 repositories {
     mavenLocal()
@@ -80,11 +82,12 @@ dependencies {
 
     // micronaut
     annotationProcessor "io.micronaut:micronaut-inject-java"
-    annotationProcessor "io.micronaut:micronaut-validation"
+    annotationProcessor "io.micronaut.validation:micronaut-validation-processor"
     annotationProcessor 'io.micronaut.openapi:micronaut-openapi'
     implementation "io.micronaut:micronaut-inject"
-    implementation "io.micronaut:micronaut-validation"
+    implementation "io.micronaut.validation:micronaut-validation"
     implementation "io.micronaut:micronaut-runtime"
+    implementation("io.micronaut:micronaut-http-client")
     implementation "io.micronaut:micronaut-http-server-netty"
     implementation "io.swagger.core.v3:swagger-annotations"
     runtimeOnly 'ch.qos.logback:logback-classic'
@@ -112,43 +115,43 @@ dependencies {
     implementation 'org.sourcelab:kafka-connect-client:4.0.3'
 
     // strimzi
-    implementation group: 'io.strimzi', name: 'kafka-oauth-common', version: '0.13.0'
-    implementation group: 'io.strimzi', name: 'kafka-oauth-client', version: '0.13.0'
+    implementation group: 'io.strimzi', name: 'kafka-oauth-common', version: '0.14.0'
+    implementation group: 'io.strimzi', name: 'kafka-oauth-client', version: '0.14.0'
 
     // log
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha5'
-    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '2.0.0-alpha5'
-    implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '2.0.0-alpha5'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.9'
+    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '2.0.9'
+    implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '2.0.9'
 
     // utils
     implementation group: 'org.codehaus.httpcache4j.uribuilder', name: 'uribuilder', version: '2.0.0'
-    implementation 'com.google.guava:guava:32.0.1-jre'
+    implementation 'com.google.guava:guava:32.1.3-jre'
     implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.15.3'
 
     // avro
-    implementation 'org.apache.avro:avro:1.11.1'
+    implementation 'org.apache.avro:avro:1.11.3'
 
     // jackson-module-scala
-    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-scala_2.13', version: '2.13.4'
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-scala_2.13', version: '2.15.3'
 
     // protobuf
-    implementation group: "com.google.protobuf", name: "protobuf-java", version: '3.22.2'
-    implementation group: "com.google.protobuf", name: "protobuf-java-util", version: '3.22.2'
+    implementation group: "com.google.protobuf", name: "protobuf-java", version: '3.25.0'
+    implementation group: "com.google.protobuf", name: "protobuf-java-util", version: '3.25.0'
 
     // Password hashing
     implementation group: "org.mindrot", name: "jbcrypt", version: "0.4"
 
-    implementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.17'
+    implementation group: 'org.apache.groovy', name: 'groovy-all', version: '4.0.15'
     // api
 
     // client
     implementation project(":client")
 
     //AWS MSK IAM Auth
-    implementation group: 'software.amazon.msk', name: 'aws-msk-iam-auth', version: '1.1.7'
+    implementation group: 'software.amazon.msk', name: 'aws-msk-iam-auth', version: '2.0.0'
 
-    implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.5.3'
+    implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.5.11'
 }
 
 /**********************************************************************************************************************\
@@ -203,7 +206,7 @@ dependencies {
     testImplementation 'com.fasterxml.jackson.core:jackson-core:'
     testImplementation 'com.fasterxml.jackson.core:jackson-annotations'
     testImplementation 'com.fasterxml.jackson.core:jackson-databind'
-    testImplementation 'org.codehaus.jackson:jackson-mapper-lgpl:1.9.11'
+    testImplementation 'org.codehaus.jackson:jackson-mapper-lgpl:1.9.13'
 }
 
 testlogger {
