--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     // micronaut
     id "com.github.johnrengelman.shadow" version "8.1.1"
-    id "io.micronaut.application" version "4.1.2"
+    id "io.micronaut.application" version "4.0.0"
 
     // akhq
     id "com.gorylenko.gradle-git-properties" version "2.4.1"
@@ -19,8 +19,9 @@ java {
 }
 group "org.akhq"
 version "0.25.0"
-mainClassName = "org.akhq.App"
-sourceCompatibility = "17"
+application {
+    mainClassName = "org.akhq.App"
+}
 
 repositories {
     mavenLocal()
@@ -43,9 +44,6 @@ configurations.all {
         force("org.apache.kafka:kafka-server-common:" + kafkaVersion)
         force("org.apache.kafka:kafka_" + kafkaScalaVersion + ":" + kafkaVersion)
 
-        force("org.slf4j:slf4j-api:1.7.32")
-        force("org.slf4j:jul-to-slf4j:1.7.32")
-        force("org.slf4j:log4j-over-slf4j:1.7.32")
         force("com.google.protobuf:protobuf-java:3.22.2")
     }
 }
@@ -77,30 +75,34 @@ micronaut {
  **********************************************************************************************************************/
 dependencies {
     // lombok
-    annotationProcessor "org.projectlombok:lombok:" + lombokVersion
-    compileOnly 'org.projectlombok:lombok:' + lombokVersion
+    annotationProcessor("org.projectlombok:lombok:" + lombokVersion)
+    compileOnly("org.projectlombok:lombok:" + lombokVersion)
 
     // micronaut
-    annotationProcessor "io.micronaut:micronaut-inject-java"
-    annotationProcessor "io.micronaut.validation:micronaut-validation-processor"
-    annotationProcessor 'io.micronaut.openapi:micronaut-openapi'
-    implementation "io.micronaut:micronaut-inject"
-    implementation "io.micronaut.validation:micronaut-validation"
-    implementation "io.micronaut:micronaut-runtime"
+    annotationProcessor("io.micronaut:micronaut-inject-java")
+    annotationProcessor("io.micronaut.validation:micronaut-validation-processor")
+    annotationProcessor("io.micronaut.openapi:micronaut-openapi")
+    annotationProcessor("io.micronaut.serde:micronaut-serde-processor")
+    implementation("io.micronaut:micronaut-inject")
+    implementation("io.micronaut.validation:micronaut-validation")
+    implementation("io.micronaut:micronaut-runtime")
     implementation("io.micronaut:micronaut-http-client")
-    implementation "io.micronaut:micronaut-http-server-netty"
-    implementation "io.swagger.core.v3:swagger-annotations"
-    runtimeOnly 'ch.qos.logback:logback-classic'
-    implementation "io.micronaut.security:micronaut-security-annotations"
-    implementation "io.micronaut.security:micronaut-security-jwt"
-    implementation "io.micronaut.security:micronaut-security-ldap"
-    implementation "io.micronaut.security:micronaut-security-oauth2"
-    implementation "io.micronaut:micronaut-management"
-    implementation 'io.micronaut.micrometer:micronaut-micrometer-registry-prometheus'
-    implementation "io.micronaut.cache:micronaut-cache-core"
+    implementation("io.micronaut:micronaut-http-server-netty")
+    implementation("io.micronaut:micronaut-jackson-databind")
+    implementation("io.swagger.core.v3:swagger-annotations")
+    implementation("io.micronaut.serde:micronaut-serde-jackson")
+    runtimeOnly("ch.qos.logback:logback-classic")
+    runtimeOnly("org.yaml:snakeyaml")
+    implementation("io.micronaut.security:micronaut-security-annotations")
+    implementation("io.micronaut.security:micronaut-security-jwt")
+    implementation("io.micronaut.security:micronaut-security-ldap")
+    implementation("io.micronaut.security:micronaut-security-oauth2")
+    implementation("io.micronaut:micronaut-management")
+    implementation("io.micronaut.micrometer:micronaut-micrometer-registry-prometheus")
+    implementation("io.micronaut.cache:micronaut-cache-core")
 
-    implementation "io.micronaut.rxjava2:micronaut-rxjava2"
-    implementation "io.micronaut.rxjava2:micronaut-rxjava2-http-server-netty"
+    implementation("io.micronaut.rxjava2:micronaut-rxjava2")
+    implementation("io.micronaut.rxjava2:micronaut-rxjava2-http-server-netty")
 
     // kafka
     implementation group: "org.apache.kafka", name: "kafka_" + kafkaScalaVersion, version: kafkaVersion
@@ -112,28 +114,28 @@ dependencies {
     implementation group: "io.confluent", name: "kafka-json-schema-serializer", version: confluentVersion
     implementation group: "io.confluent", name: "kafka-protobuf-serializer", version: confluentVersion
     implementation group: "io.confluent", name: "kafka-client-plugins", version: confluentVersion + "-ce"
-    implementation 'org.sourcelab:kafka-connect-client:4.0.3'
+    implementation ("org.sourcelab:kafka-connect-client:4.0.3")
 
     // strimzi
     implementation group: 'io.strimzi', name: 'kafka-oauth-common', version: '0.14.0'
     implementation group: 'io.strimzi', name: 'kafka-oauth-client', version: '0.14.0'
 
     // log
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.9'
-    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '2.0.9'
-    implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '2.0.9'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha5'
+    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '2.0.0-alpha5'
+    implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '2.0.0-alpha5'
 
     // utils
     implementation group: 'org.codehaus.httpcache4j.uribuilder', name: 'uribuilder', version: '2.0.0'
     implementation 'com.google.guava:guava:32.1.3-jre'
     implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.15.3'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
 
     // avro
-    implementation 'org.apache.avro:avro:1.11.3'
+    implementation 'org.apache.avro:avro:1.11.0'
 
     // jackson-module-scala
-    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-scala_2.13', version: '2.15.3'
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-scala_2.13', version: '2.13.4'
 
     // protobuf
     implementation group: "com.google.protobuf", name: "protobuf-java", version: '3.25.0'
@@ -171,7 +173,7 @@ test {
 }
 
 dependencies {
-    testImplementation 'ch.qos.logback:logback-classic:1.2.9'
+    testImplementation 'ch.qos.logback:logback-classic:1.4.8'
 
     // micronaut test
     testAnnotationProcessor "org.projectlombok:lombok:" + lombokVersion
@@ -206,7 +208,6 @@ dependencies {
     testImplementation 'com.fasterxml.jackson.core:jackson-core:'
     testImplementation 'com.fasterxml.jackson.core:jackson-annotations'
     testImplementation 'com.fasterxml.jackson.core:jackson-databind'
-    testImplementation 'org.codehaus.jackson:jackson-mapper-lgpl:1.9.13'
 }
 
 testlogger {
