--- a/src/test/resources/application-extragroups.yml
+++ b/src/test/resources/application-extragroups.yml
@@ -6,3 +6,8 @@ akhq:
       another:
         - role: topic-read
 
+jackson:
+  bean-introspection-module: false
+  serialization:
+    writeDatesAsTimestamps: false
+
