--- a/src/test/resources/application-groovy.yml
+++ b/src/test/resources/application-groovy.yml
@@ -32,3 +32,8 @@ akhq:
             }
         }
 
+jackson:
+  bean-introspection-module: false
+  serialization:
+    writeDatesAsTimestamps: false
+
