--- a/src/test/resources/application-no-custom-http-response-headers.yml
+++ b/src/test/resources/application-no-custom-http-response-headers.yml
@@ -10,3 +10,9 @@ akhq:
     dummy-kafka-cluster:
       properties:
         bootstrap.servers: "localhost:9121"
+
+
+jackson:
+  bean-introspection-module: false
+  serialization:
+    writeDatesAsTimestamps: false
