--- a/src/test/resources/application-custom-http-response-headers.yml
+++ b/src/test/resources/application-custom-http-response-headers.yml
@@ -34,3 +34,8 @@ akhq:
         value: "REMOVE_HEADER"
       - name: "Server"
         value: "REMOVE_HEADER"
+
+jackson:
+  bean-introspection-module: false
+  serialization:
+    writeDatesAsTimestamps: false
