--- a/src/test/resources/application-header-ip-disallow.yml
+++ b/src/test/resources/application-header-ip-disallow.yml
@@ -5,3 +5,9 @@ akhq:
       groups-header: x-akhq-group
       ip-patterns: ["none"]
     default-group: invalid-group
+
+
+jackson:
+  bean-introspection-module: false
+  serialization:
+    writeDatesAsTimestamps: false
