feat(auth): customizable github SSO url (#1606)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,6 +66,9 @@ micronaut:
     kafka-wrapper:
       record-stats: true
       expire-after-write: 0s
+  http:
+    client:
+      github.api.url: https://api.github.com
 
 jackson:
   serialization:
