--- a/src/test/resources/application-rest-api.yml
+++ b/src/test/resources/application-rest-api.yml
@@ -4,8 +4,12 @@ micronaut:
   http:
     client:
       follow-redirects: false # Required to ignore /login redirection
-      allow-block-event-loop: false
-      log-level: trace
+      allow-block-event-loop: true
+      log-level: warn
+      ssl:
+        enabled: false
+      read-idle-timeout: 10m
+      read-timeout: 10m
   security:
     enabled: true
     authentication: cookie
