--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,27 @@
 plugins {
     // micronaut
     id "com.github.johnrengelman.shadow" version "8.1.1"
-    id "io.micronaut.application" version "3.7.10"
+    id "io.micronaut.application" version "4.2.0"
 
     // akhq
     id "com.gorylenko.gradle-git-properties" version "2.4.1"
-    id 'com.adarshr.test-logger' version '3.2.0'
-    id 'org.gradle.test-retry' version '1.5.3'
+    id 'com.adarshr.test-logger' version '4.0.0'
+    id 'org.gradle.test-retry' version '1.5.6'
     id 'com.github.psxpaul.execfork' version '0.2.2'
-    id "com.github.ben-manes.versions" version "0.47.0"
-    id "com.github.davidmc24.gradle.plugin.avro" version "1.7.1"
-
+    id "com.github.ben-manes.versions" version "0.49.0"
+    id "com.github.davidmc24.gradle.plugin.avro" version "1.9.1"
     // idea
     id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.7"
 }
-
+java {
+    sourceCompatibility = JavaVersion.toVersion("17")
+    targetCompatibility = JavaVersion.toVersion("17")
+}
+application {
+    mainClass.set("org.akhq.App")
+}
 group "org.akhq"
 version "0.24.0"
-mainClassName = "org.akhq.App"
-sourceCompatibility = 11
 
 repositories {
     mavenLocal()
@@ -41,9 +44,6 @@ configurations.all {
         force("org.apache.kafka:kafka-server-common:" + kafkaVersion)
         force("org.apache.kafka:kafka_" + kafkaScalaVersion + ":" + kafkaVersion)
 
-        force("org.slf4j:slf4j-api:1.7.32")
-        force("org.slf4j:jul-to-slf4j:1.7.32")
-        force("org.slf4j:log4j-over-slf4j:1.7.32")
         force("com.google.protobuf:protobuf-java:3.22.2")
     }
 }
@@ -75,29 +75,33 @@ micronaut {
  **********************************************************************************************************************/
 dependencies {
     // lombok
-    annotationProcessor "org.projectlombok:lombok:" + lombokVersion
-    compileOnly 'org.projectlombok:lombok:' + lombokVersion
+    annotationProcessor("org.projectlombok:lombok:" + lombokVersion)
+    compileOnly("org.projectlombok:lombok:" + lombokVersion)
 
     // micronaut
-    annotationProcessor "io.micronaut:micronaut-inject-java"
-    annotationProcessor "io.micronaut:micronaut-validation"
-    annotationProcessor 'io.micronaut.openapi:micronaut-openapi'
-    implementation "io.micronaut:micronaut-inject"
-    implementation "io.micronaut:micronaut-validation"
-    implementation "io.micronaut:micronaut-runtime"
-    implementation "io.micronaut:micronaut-http-server-netty"
-    implementation "io.swagger.core.v3:swagger-annotations"
-    runtimeOnly 'ch.qos.logback:logback-classic'
-    implementation "io.micronaut.security:micronaut-security-annotations"
-    implementation "io.micronaut.security:micronaut-security-jwt"
-    implementation "io.micronaut.security:micronaut-security-ldap"
-    implementation "io.micronaut.security:micronaut-security-oauth2"
-    implementation "io.micronaut:micronaut-management"
-    implementation 'io.micronaut.micrometer:micronaut-micrometer-registry-prometheus'
-    implementation "io.micronaut.cache:micronaut-cache-core"
+    annotationProcessor("io.micronaut:micronaut-inject-java")
+    annotationProcessor("io.micronaut.validation:micronaut-validation-processor")
+    annotationProcessor("io.micronaut.openapi:micronaut-openapi")
+    implementation("io.micronaut:micronaut-inject")
+    implementation("io.micronaut:micronaut-runtime")
+    implementation("io.micronaut.validation:micronaut-validation")
+    implementation("io.micronaut:micronaut-http-client")
+    implementation("io.micronaut:micronaut-http-server-netty")
+    implementation("io.micronaut:micronaut-jackson-databind")
+    implementation("io.swagger.core.v3:swagger-annotations")
+    runtimeOnly("ch.qos.logback:logback-classic")
+    runtimeOnly("org.yaml:snakeyaml")
+    implementation("io.micronaut.security:micronaut-security-annotations")
+    implementation("io.micronaut.security:micronaut-security-jwt")
+    implementation("io.micronaut.security:micronaut-security-ldap")
+    implementation("io.micronaut.security:micronaut-security-oauth2")
+    implementation("io.micronaut:micronaut-management")
+    implementation("io.micronaut:micronaut-retry")
+    implementation("io.micronaut.micrometer:micronaut-micrometer-registry-prometheus")
+    implementation("io.micronaut.cache:micronaut-cache-core")
 
-    implementation "io.micronaut.rxjava2:micronaut-rxjava2"
-    implementation "io.micronaut.rxjava2:micronaut-rxjava2-http-server-netty"
+    implementation("io.micronaut.rxjava2:micronaut-rxjava2")
+    implementation("io.micronaut.rxjava2:micronaut-rxjava2-http-server-netty")
 
     // kafka
     implementation group: "org.apache.kafka", name: "kafka_" + kafkaScalaVersion, version: kafkaVersion
@@ -109,11 +113,11 @@ dependencies {
     implementation group: "io.confluent", name: "kafka-json-schema-serializer", version: confluentVersion
     implementation group: "io.confluent", name: "kafka-protobuf-serializer", version: confluentVersion
     implementation group: "io.confluent", name: "kafka-client-plugins", version: confluentVersion + "-ce"
-    implementation 'org.sourcelab:kafka-connect-client:4.0.3'
+    implementation ("org.sourcelab:kafka-connect-client:4.0.3")
 
     // strimzi
-    implementation group: 'io.strimzi', name: 'kafka-oauth-common', version: '0.13.0'
-    implementation group: 'io.strimzi', name: 'kafka-oauth-client', version: '0.13.0'
+    implementation group: 'io.strimzi', name: 'kafka-oauth-common', version: '0.14.0'
+    implementation group: 'io.strimzi', name: 'kafka-oauth-client', version: '0.14.0'
 
     // log
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha5'
@@ -122,33 +126,33 @@ dependencies {
 
     // utils
     implementation group: 'org.codehaus.httpcache4j.uribuilder', name: 'uribuilder', version: '2.0.0'
-    implementation 'com.google.guava:guava:32.0.1-jre'
+    implementation 'com.google.guava:guava:32.1.3-jre'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
 
     // avro
-    implementation 'org.apache.avro:avro:1.11.1'
+    implementation 'org.apache.avro:avro:1.11.0'
 
     // jackson-module-scala
     implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-scala_2.13', version: '2.13.4'
 
     // protobuf
-    implementation group: "com.google.protobuf", name: "protobuf-java", version: '3.22.2'
-    implementation group: "com.google.protobuf", name: "protobuf-java-util", version: '3.22.2'
+    implementation group: "com.google.protobuf", name: "protobuf-java", version: '3.25.0'
+    implementation group: "com.google.protobuf", name: "protobuf-java-util", version: '3.25.0'
 
     // Password hashing
     implementation group: "org.mindrot", name: "jbcrypt", version: "0.4"
 
-    implementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.17'
+    implementation group: 'org.apache.groovy', name: 'groovy-all', version: '4.0.15'
     // api
 
     // client
     implementation project(":client")
 
     //AWS MSK IAM Auth
-    implementation group: 'software.amazon.msk', name: 'aws-msk-iam-auth', version: '1.1.7'
+    implementation group: 'software.amazon.msk', name: 'aws-msk-iam-auth', version: '2.0.0'
 
-    implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.5.3'
+    implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.5.11'
 }
 
 /**********************************************************************************************************************\
@@ -165,22 +169,34 @@ test {
         maxRetries = 5
         maxFailures = 15
     }
+
+    retry {
+        maxRetries = 5
+        maxFailures = 15
+    }
 }
 
 dependencies {
-    testImplementation 'ch.qos.logback:logback-classic:1.2.9'
+    testImplementation 'ch.qos.logback:logback-classic'
 
     // micronaut test
     testAnnotationProcessor "org.projectlombok:lombok:" + lombokVersion
     testCompileOnly 'org.projectlombok:lombok:' + lombokVersion
 
     testAnnotationProcessor "io.micronaut:micronaut-inject-java"
-    testImplementation "io.micronaut.test:micronaut-test-junit5"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
-    testImplementation "org.junit.jupiter:junit-jupiter-api"
-    testImplementation "org.junit.jupiter:junit-jupiter-params"
-    testImplementation "io.micronaut:micronaut-http-client"
-    testImplementation "io.micronaut.rxjava2:micronaut-rxjava2-http-client"
+
+    testImplementation("org.junit.jupiter:junit-jupiter-api")
+    testImplementation("io.micronaut.test:micronaut-test-junit5")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
+    testImplementation("org.junit.jupiter:junit-jupiter-engine")
+    testImplementation ("org.junit.jupiter:junit-jupiter-params")
+
+    testImplementation ("io.micronaut:micronaut-http-client")
+    testImplementation ("io.micronaut:micronaut-runtime")
+    testImplementation ("io.micronaut:micronaut-management")
+    testImplementation ("io.micronaut:micronaut-inject")
+    testImplementation ("io.micronaut.rxjava2:micronaut-rxjava2-http-client")
+    testImplementation("io.micronaut.test:micronaut-test-rest-assured")
 
     // test
     testImplementation "org.apache.kafka:kafka-clients:" + kafkaVersion + ":test"
@@ -200,10 +216,6 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-library:2.2'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'
     testImplementation 'com.salesforce.kafka.test:kafka-junit5:3.2.5'
-    testImplementation 'com.fasterxml.jackson.core:jackson-core:'
-    testImplementation 'com.fasterxml.jackson.core:jackson-annotations'
-    testImplementation 'com.fasterxml.jackson.core:jackson-databind'
-    testImplementation 'org.codehaus.jackson:jackson-mapper-lgpl:1.9.11'
 }
 
 testlogger {
