Fixing blocking call after Micronaut migration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,6 +68,7 @@ micronaut:
       expire-after-write: 0s
   http:
     client:
+      allow-block-event-loop: true
       github.api.url: https://api.github.com
 
 jackson:
