--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.24.0",
   "private": true,
   "homepage": "./ui",
+  "packageManager": "npm@9.8.1",
   "dependencies": {
     "@date-io/moment": "^2.8.0",
     "@material-ui/core": "^4.9.5",
