--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "akhq-front-end",
   "version": "0.24.0",
   "private": true,
+  "type": "module",
   "homepage": "./ui",
   "packageManager": "npm@9.8.1",
   "dependencies": {
@@ -36,7 +37,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --host",
     "test": "vitest",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
@@ -62,7 +63,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.0",
-    "jest-dom": "^4.0.0",
     "joi": "^17.12.2",
     "joi-browser": "^13.4.0",
     "jsdom": "^24.0.0",
