--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,48 +20,45 @@ jobs:
     env:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-    strategy:
-      matrix:
-        java: ['17']
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       # Caches
       - name: Gradle cache
-        uses: actions/cache@v1
+        uses: actions/cache@v4
         with:
           path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          key: "${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}"
           restore-keys: |
             ${{ runner.os }}-gradle-
       - name: Gradle wrapper cache
-        uses: actions/cache@v1
+        uses: actions/cache@v4
         with:
           path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-wrapper-${{ hashFiles('**/*.gradle') }}
+          key: "${{ runner.os }}-wrapper-${{ hashFiles('**/*.gradle') }}"
           restore-keys: |
             ${{ runner.os }}-wrapper-
       - name: Npm cache
-        uses: actions/cache@v1
+        uses: actions/cache@v4
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          key: "${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}"
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Node cache
-        uses: actions/cache@v1
+        uses: actions/cache@v4
         with:
           path: node
-          key: ${{ runner.os }}-node-${{ hashFiles('**/*.gradle') }}
+          key: "${{ runner.os }}-node-${{ hashFiles('**/*.gradle') }}"
           restore-keys: |
             ${{ runner.os }}-node-
 
       # JDK
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
-          java-version: ${{ matrix.java }}
+          distribution: 'temurin'
+          java-version: 17
 
       # Gradle check
       - name: Build with Gradle
@@ -71,7 +68,7 @@ jobs:
 
       # Shadow Jar, Tar and Zip
       - name: Build jars and distribution archives
-        if: success() && matrix.java == '17'
+        if: success()
         run: ./gradlew shadowJar distTar distZip --no-daemon
 
       # Upload artifacts
@@ -83,8 +80,8 @@ jobs:
           find build/distributions/akhq-*.zip -type f -exec cp "{}" build/dist/ ";"
 
       - name: Upload jar
-        uses: actions/upload-artifact@v1
-        if: success() && matrix.java == '17'
+        uses: actions/upload-artifact@v4
+        if: success()
         with:
           name: jar
           path: build/libs/
@@ -101,7 +98,7 @@ jobs:
 
       # GitHub Release
       - name: Create GitHub release
-        uses: "marvinpinto/action-automatic-releases@latest"
+        uses: marvinpinto/action-automatic-releases@latest
         if: startsWith(github.ref, 'refs/tags/')
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
@@ -113,22 +110,22 @@ jobs:
 
       # Docker
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
         if: github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/tags/')
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
         if: github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/tags/')
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         if: github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/tags/')
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Login to GHCR
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         if: github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/tags/')
         with:
           registry: ghcr.io
@@ -137,7 +134,7 @@ jobs:
 
       - name: Extract metadata for Docker
         id: meta
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v5
         if: github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/tags/')
         with:
           images: |
@@ -152,7 +149,7 @@ jobs:
             type=ref,event=pr
 
       - name: Publish to registries
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         if: github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/tags/')
         with:
           push: true
@@ -163,7 +160,7 @@ jobs:
 
       # Slack
       - name: Slack notification
-        uses: 8398a7/action-slack@v2
+        uses: 8398a7/action-slack@v3
         if: ${{ always() && env.SLACK_WEBHOOK_URL != 0 }}
         with:
           status: ${{ job.status }}
