--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-micronautVersion=4.2.4
+micronautVersion=4.3.8
 confluentVersion=7.4.4
 kafkaVersion=3.6.1
 kafkaScalaVersion=2.13
 lombokVersion=1.18.30
+jacksonVersion=2.16.1
