* feat(auth): add ability to send an authentication header to external service (#1759)
---------

Co-authored-by: Cenk Kılıç <c.kilic@rewe-group.at>
Co-authored-by: Mohamed Hammad <m.hammad@rewe-group.at>

--- a/src/test/resources/application-rest-api.yml
+++ b/src/test/resources/application-rest-api.yml
@@ -35,3 +35,6 @@ akhq:
     rest:
       enabled: true
       url: /external-mock
+      headers:
+        - name: X-Custom-Authentication
+          value: Bearer custom-authentication
